--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 dj-database-url==0.5.0
 Django==3.2.9
+django-extensions==3.1.5
 djangorestframework==3.12.4
 psycopg2==2.9.2
 pytz==2021.3
