--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dj-database-url==0.5.0
 Django==3.2.9
 django-cors-headers==3.10.0
 django-extensions==3.1.5
+django-filter==21.1
 django-seed==0.3.1
 djangorestframework==3.12.4
 drf-yasg==1.20.0
