django ci updated

--- a/.github/workflows/ci-django.yml
+++ b/.github/workflows/ci-django.yml
@@ -5,6 +5,8 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+env:
+  DATABASE_URL: postgres://postgres:postgres@localhost:5432/github_actions
 
 jobs:
   build:
@@ -20,7 +22,6 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: github_actions
-          DATABASE_URL: postgres://postgres:postgres@postgres:5432/github_actions
         ports:
           - 5432:5432
         # needed because the postgres container does not provide a healthcheck
