--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,14 @@ Django==3.2.9
 django-cors-headers==3.10.0
 django-extensions==3.1.5
 django-filter==21.1
+django-heroku==0.3.1
 django-seed==0.3.1
 djangorestframework==3.12.4
 drf-yasg==1.20.0
 Faker==9.9.0
 filelock==3.4.0
 flake8==4.0.1
+gunicorn==20.1.0
 identify==2.4.0
 idna==3.3
 inflection==0.5.1
@@ -62,3 +64,4 @@ uritemplate==4.1.1
 urllib3==1.26.7
 virtualenv==20.10.0
 wcwidth==0.2.5
+whitenoise==5.3.0
