--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cfgv==3.3.1
 charset-normalizer==2.0.9
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==6.2
 decorator==5.1.0
 distlib==0.3.4
 dj-database-url==0.5.0
