added codecov token

--- a/.github/workflows/ci-django.yml
+++ b/.github/workflows/ci-django.yml
@@ -53,3 +53,5 @@ jobs:
           coverage run manage.py test && coverage json
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
