--- a/.github/workflows/ci-django.yml
+++ b/.github/workflows/ci-django.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Run Tests And Generate Coverage Report
         run: |
           pip install coverage
-          coverage run manage.py test && coverage json
+          coverage run manage.py test && coverage xml
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
