--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,20 @@ autopep8==1.6.0
 backcall==0.2.0
 backports.entry-points-selectable==1.1.1
 certifi==2021.10.8
+cffi==1.15.0
 cfgv==3.3.1
 charset-normalizer==2.0.9
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==6.2
+cryptography==36.0.2
 decorator==5.1.0
+defusedxml==0.7.1
 distlib==0.3.4
 dj-database-url==0.5.0
+dj-rest-auth==2.2.3
 Django==3.2.9
+django-allauth==0.50.0
 django-cors-headers==3.10.0
 django-extensions==3.1.5
 django-filter==21.1
@@ -34,6 +39,7 @@ MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
 mccabe==0.6.1
 nodeenv==1.6.0
+oauthlib==3.2.0
 openapi-codec==1.3.2
 packaging==21.3
 parso==0.8.3
@@ -45,13 +51,17 @@ prompt-toolkit==3.0.23
 psycopg2==2.9.2
 ptyprocess==0.7.0
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
 Pygments==2.10.0
+PyJWT==2.3.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
+python3-openid==3.2.0
 pytz==2021.3
 PyYAML==6.0
 requests==2.26.0
+requests-oauthlib==1.3.1
 ruamel.yaml==0.17.17
 ruamel.yaml.clib==0.2.6
 simplejson==3.17.6
